<resources>
    <string name="app_name">币哩币哩</string>

    <string name="item_home">首页</string>
    <string name="item_financial">理财</string>
    <string name="item_market">行情</string>
    <string name="item_wallet">钱包</string>
    <string name="item_mine">我的</string>

    <string name="app_exit_prompt">再按一次退出程序</string>


    <string name="span_1"><Data><![CDATA[1.邀请好友购买OTC套利新月产品，即可获得其首次入金额<font color="#ff0000">0.2%</font>的奖励]]></Data></string>
    <string name="span_2"><Data><![CDATA[2.邀请好友购买OTC套利一季产品，即可获得其首次入金额<font color="#ff0000">0.9%</font>的奖励]]></Data></string>
    <string name="span_3"><Data><![CDATA[3.邀请好友购买OTC套利半年产品，即可获得其首次入金额<font color="#ff0000">1.9%</font>的奖励]]></Data></string>
    <string name="span_4"><Data><![CDATA[4.邀请好友购买OTC套利全年产品，即可获得其首次入金额<font color="#ff0000">4%</font>的奖励]]></Data></string>
    <string name="span_5"><Data><![CDATA[5.邀请好友购买ETF基金产品，即可获得其首次入金额<font color="#ff0000">4%</font>的奖励]]></Data></string>
    <string name="span_6"><Data><![CDATA[6.邀请好友购买ICO，即可获得其首次入金额<font color="#ff0000">4%</font>的奖励]]></Data></string>
    <string name="span_7"><Data>例如：5月1日-5月30日邀请金为8000元,在6月20日可以进行8000元的提取,提取到账时间为1-3个工作日</Data></string>

    <string name="seetext">马六甲比特基金是知名数字货币投资机构,旗下拥有数字货币定期理财产品、区块链私募投资和数字货币交易所等业务。我们将提供安全有保障的投资项目,您可以将闲散资金就给有融资需求的优质企业,轻松赚取远高于银行定期存款的收益。</string>

    <string name="jjgk1">\t\t数字货币基金主要是以数字货币进行投资，增值收益是数字货币的数量变多，而非传统意义上的返还法币。投资人可将闲置的数字货币进行无风险的套利交易投资，在持有数字货币的过程中，使持有的数字货币也能产生增值。</string>
    <string name="jjgk2">\t\t币币对冲套利：数字货币跨境搬砖套利是指一种或多种数字资产的跨平台套利交易。A平台、B平台存入一定量的BTC/ETH以及其他数字货币.当A平台与B平台出现汇差时，程序会在小于一秒的时间内，自动获取买一、卖一价、汇率以及手续费，并同时在A和B平台操作，不存在时间差，规避了传统搬砖的风险。</string>
    <string name="jjgk3">\t\t目前数字货币基金主要投资于币币交易的程序化套利，支持对冲套利交易、搬砖套利交易和三角套利，提供资金利用率，支持超过50个交易对的大规模套利交易。</string>


    <string name="app_title">FloatingGroupExpandableListView</string>
    <string name="android_versions_title">Android Versions</string>
    <string name="android_versions_description">Starting from Cupcake (API LEVEL 3)</string>

</resources>
