<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/two_toggle_text_left"
        android:lineSpacingExtra="5dp"
        android:paddingHorizontal="10dp"
        android:text="@string/jjgk1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        style="@style/two_toggle_text_left"
        android:paddingHorizontal="10dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/jjgk2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/two_toggle_text_left"
        android:lineSpacingExtra="5dp"
        android:paddingHorizontal="10dp"
        android:text="@string/jjgk3"/>

</LinearLayout>